# Automotive_AI_Challenge

./: .gitignore  README.md
aichallenge_ws/src/: README.md
aichallenge_ws/src/aichallenge_bringup/: CMakeLists.txt  package.xml
aichallenge_ws/src/aichallenge_bringup/data/: aichallenge.rviz
aichallenge_ws/src/aichallenge_bringup/data/mydata/: waypoint_acc.csv  waypoint_avoid.csv  waypoint_traffic_light.csv
aichallenge_ws/src/aichallenge_bringup/launch/: acc.launch  avoid.launch  traffic_light.launch  user_nodes.launch
aichallenge_ws/src/aichallenge_bringup/scripts/: initial_pose_publisher_acc.py  initial_pose_publisher_avoid.py  initial_pose_publisher_traffic_light.py  yaml_to_camera_info_publisher.py
aichallenge_ws/src/feat_proj_lanelet2_v2/: CMakeLists.txt  package.xml
aichallenge_ws/src/feat_proj_lanelet2_v2/launch/: feat_proj_lanelet2_v2.launch
aichallenge_ws/src/feat_proj_lanelet2_v2/lib/: context.cpp
aichallenge_ws/src/feat_proj_lanelet2_v2/nodes/: feat_proj_lanelet2_core_backup.cpp  feat_proj_lanelet2_core_v2.cpp  feat_proj_lanelet2_node_v2.cpp
aichallenge_ws/src/mpc_follower2/: CMakeLists.txt  package.xml
aichallenge_ws/src/mpc_follower2/include/mpc_follower2/: mpc_follower_core.h  mpc_utils.h
aichallenge_ws/src/mpc_follower2/include/mpc_follower2/qp_solver/: qp_solver_qpoases.h  qp_solver_unconstr.h  qp_solver_unconstr_fast.h
aichallenge_ws/src/mpc_follower2/include/mpc_follower2/vehicle_model/: vehicle_model_bicycle_dynamics.h  vehicle_model_bicycle_kinematics.h  vehicle_model_bicycle_kinematics_no_delay.h
aichallenge_ws/src/mpc_follower2/launch/: mpc_follower2.launch
aichallenge_ws/src/mpc_follower2/src/: lowpass_filter.cpp  mpc_follower_core.cpp  mpc_follower_node.cpp  mpc_trajectory.cpp  mpc_utils.cpp  mpc_waypoints_converter.cpp
aichallenge_ws/src/mpc_follower2/src/qp_solver/: qp_solver_qpoases.cpp  qp_solver_unconstr.cpp  qp_solver_unconstr_fast.cpp
aichallenge_ws/src/mpc_follower2/src/vehicle_model/: vehicle_model_bicycle_dynamics.cpp  vehicle_model_bicycle_kinematics.cpp  vehicle_model_bicycle_kinematics_no_delay.cpp  vehicle_model_interface.cpp
aichallenge_ws/src/mpc_follower2/test/src/: test_mpc_follower.cpp  test_mpc_lowpass_filter.cpp  test_mpc_utils.cpp
aichallenge_ws/src/region_tlr_effnet/: CMakeLists.txt  package.xml
aichallenge_ws/src/region_tlr_effnet/data/cudnn/lib64/: libcudnn.so.7
aichallenge_ws/src/region_tlr_effnet/data/libtorch/include/caffe2/core/: macros.h
aichallenge_ws/src/region_tlr_effnet/data/libtorch/share/cmake/Caffe2/public/: cuda.cmake
aichallenge_ws/src/region_tlr_effnet/include/: context.h  region_tlr_effNet.h  traffic_light_recognizer.h
aichallenge_ws/src/region_tlr_effnet/launch/: traffic_light_recognition_effNet.launch
aichallenge_ws/src/region_tlr_effnet/lib/: context.cpp
aichallenge_ws/src/region_tlr_effnet/nodes/: region_tlr_effNet.cpp  traffic_light_recognizer.cpp
aichallenge_ws/src/twist_filter2/: CMakeLists.txt  package.xml
aichallenge_ws/src/twist_filter2/launch/: twist_filter2.launch
aichallenge_ws/src/twist_filter2/src/: twist_filter2.cpp
aichallenge_ws/src/twist_gate3/: CMakeLists.txt  package.xml
aichallenge_ws/src/twist_gate3/include/twist_gate3/: twist_gate.h
aichallenge_ws/src/twist_gate3/src/: twist_gate.cpp  twist_gate_node.cpp
aichallenge_ws/src/twist_gate3/test/src/: test_twist_gate.hpp
aichallenge_ws/src/vision_effdet_detect/: CMakeLists.txt  package.xml
aichallenge_ws/src/vision_effdet_detect/include/: rect_class_score.h  vision_effDet_detect.h
aichallenge_ws/src/vision_effdet_detect/include/nms/cpu/: nms_cpu.cpp
aichallenge_ws/src/vision_effdet_detect/include/nms/cuda/: nms_cuda.cu
aichallenge_ws/src/vision_effdet_detect/launch/: vision_effDet_detect.launch
aichallenge_ws/src/vision_effdet_detect/src/: vision_effDet_detect.cpp  vision_effDet_detect_node.cpp
effdet/: py2lib.py  test.py  test.sh  train.py  train.sh
effdet/src/: dataset.py  loss.py  model.py  test_model.py  utils.py
effnet/efficientnet_pytorch/: model.py  utils.py
effnet/mydata/train/: efficient_net_train.py  train.sh
effnet/mydata/train/log/: events.out.tfevents.1585807305.murarin-pc.90983.0
utils/: create_text.py  data_resize.py  data_shuffle_split.py  file_name_get.py  info_transform.py  join_pcd  join_pcd.py  kitti_data_edit.sh  label_edit.py  left_right_to_top.py  pcd_to_bin.py  removal_bb.py  size_conf.py  split_data.py  trafficLight_crop.py  trafficLight_sorting.py
