<?xml version="1.0"?>
<package format="2">
  <name>feat_proj_lanelet2_v2</name>
  <version>1.12.0</version>
  <description>The trafficlight_recognizer package</description>
  <maintainer email="murarin@mprg.cs.chubu.ac.jp">Takuya Murase</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libvectormap</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>vector_map</depend>
  <depend>vector_map_server</depend>
  <depend>visualization_msgs</depend>
  <depend>lanelet2_extension</depend>
  
</package>
