<?xml version="1.0"?>
<package format="2">
  <name>region_tlr_effnet</name>
  <version>1.13.0</version>
  <description>efficientNet for traffic light recognition</description>
  <maintainer email="murarin@mprg.cs.chubu.ac.jp">Takuya Murase</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libvectormap</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>vector_map</depend>
  <depend>vector_map_server</depend>
  <depend>visualization_msgs</depend>
  <depend>lanelet2_extension</depend>

</package>
