<?xml version="1.0"?>
<package format="2">
  <name>twist_filter2</name>
  <version>1.12.0</version>
  <description>The twist_filter2 package</description>
  <maintainer email="murarin@mprg.cs.chubu.ac.jp">Takuya Murase</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_config_msgs</depend>
  <depend>autoware_health_checker</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>roslint</depend>
</package>
